--- a/examples/all.html
+++ b/examples/all.html
@@ -1,7 +1,9 @@
+<t-example src="./start.html"></t-example>
 <t-example src="./hello.html"></t-example>
 <t-example src="./controls.html"></t-example>
 <t-example src="./gui.html"></t-example>
 <t-example src="./raycast.html"></t-example>
+<t-example src="./transform.html"></t-example>
 
 <script>
   customElements.define(
