--- a/examples/transform.html
+++ b/examples/transform.html
@@ -11,9 +11,7 @@
   }
 </script>
 
-<t-renderer>
-  <t-transform></t-transform>
-</t-renderer>
+<t-renderer></t-renderer>
 
 <script type="module">
   import "../three-webc.js";
