--- a/examples/geo.html
+++ b/examples/geo.html
@@ -21,7 +21,7 @@
 </t-renderer>
 
 <t-gui>
-  <p>This example shows how to add simple geometry.</p>
+  <p>This example shows how to add geometry.</p>
 </t-gui>
 
 <script type="module">
