--- a/examples/gui.html
+++ b/examples/gui.html
@@ -18,5 +18,5 @@
 
 <script type="module">
   import "../three-webc.js";
-  import "./addons/scene-gui.js"
+  import "./addons/gui/scene-gui.js"
 </script>
