--- a/examples/materials.html
+++ b/examples/materials.html
@@ -12,9 +12,12 @@
 </script>
 
 <t-renderer antialias orbit>
-  <t-geo geo="Plane"></t-geo>
-  <t-geo geo="Sphere" :position="{ x: 2 }"></t-geo>
-  <t-geo geo="Plane" :rotation="{ x: -Math.PI / 2 }"></t-geo>
+  <t-geo geo="Box" :position="{ x: 0, y: 1 }">
+    <t-material type="MeshStandard" color="green" />
+  </t-geo>
+  <t-geo geo="Box" :position="{ x: 2, y: 1 }">
+    <t-material type="MeshStandard" color="blue" />
+  </t-geo>
   <t-axes></t-axes>
   <t-studio></t-studio>
 </t-renderer>
@@ -26,5 +29,6 @@
 <script type="module">
   import "../three-webc.js";
   import "./addons/geo.js";
+  import "./addons/material.js";
   import "./addons/studio.js"
 </script>
