--- a/examples/list.html
+++ b/examples/list.html
@@ -5,6 +5,11 @@
 <t-example src="./raycast.html"></t-example>
 <t-example src="./transform.html"></t-example>
 
+<style>
+  /* @import url('./style.css'); */
+  iframe { min-width: 100%; height: 40vh; }
+</style>
+
 <script>
   customElements.define(
     "t-example",
