--- a/examples/animation.html
+++ b/examples/animation.html
@@ -17,18 +17,22 @@
   <t-object3d>
     <t-raycaster></t-raycaster>
     <t-model
+      debug
       :position="{x: -2}"
       url="https://threejs.org/examples/models/gltf/Soldier.glb"
     ></t-model>
     <t-model
+      debug
       :position="{x: 0}"
       url="https://threejs.org/examples/models/gltf/Soldier.glb"
     ></t-model>
     <t-model
+      debug
       :position="{x: 2}"
       url="https://threejs.org/examples/models/gltf/Soldier.glb"
     ></t-model>
   </t-object3d>
+  <t-effects></t-effects>
 </t-renderer>
 
 <t-gui>
@@ -39,6 +43,7 @@
   import "../three-webc.js";
   import "./addons/model.js";
   import "./addons/studio.js";
+  import * as EFFECTS from "./addons/effects.js";
 
   const renderer = document.querySelector("t-renderer");
 
@@ -49,18 +54,16 @@
   };
 
   document.querySelectorAll("t-model")[0].addEventListener("ready", (e) => {
-    const {gltf, mixer} = e.target
-    mixer.clipAction(gltf.animations[1])
-        .play();
+    const { gltf, mixer } = e.target;
+    mixer.clipAction(gltf.animations[1]).play();
   });
 
   document.querySelectorAll("t-model")[1].addEventListener("ready", (e) => {
-    const {gltf, mixer} = e.target
-    mixer.clipAction(gltf.animations[2])
-        .play();
+    const { gltf, mixer } = e.target;
+    mixer.clipAction(gltf.animations[2]).play();
   });
 
-  renderer.viewport.rafs.push((t) => {
+  renderer.rafs.push((t) => {
     // {
     //   const model = models[0];
     //   model.rotation.y += 0.3 * t;
@@ -75,4 +78,46 @@
 
   // Interact from console
   // document.querySelector('t-model').position.x += 0.1
+
+  const state = {
+    current: { name: ''},
+  };
+
+  // Raycast
+  const raycaster = document.querySelector("t-raycaster");
+
+  renderer.domElement.addEventListener("mousemove", (e) => {
+    const intersects = raycaster.cast();
+    const object = intersects.length && intersects[0].object;
+
+    if (object && state.current.uuid !== object.uuid) {
+      EFFECTS.bounce(object, { scale: 1.2 });
+    }
+
+    document.body.style.cursor = object ? "pointer" : "";
+    Object.assign(state.current, object || { name: "", uuid: "" });
+  });
+
+  renderer.domElement.addEventListener("click", (e) => {
+    const intersects = raycaster.cast();
+    const object = intersects.length && intersects[0].object;
+    if(!object) {
+      console.warn('void ray')
+    }
+    if (object) {
+      console.warn('hit',object)
+      EFFECTS.bounce(object);
+    }
+  });
+
+  {
+    const { GUI } = await import(
+      "https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
+    );
+    const gui = new GUI();
+
+    const raycaster = document.querySelector("t-raycaster");
+    const folder = gui;
+    folder.add(state.current, "name").listen();
+  }
 </script>
