--- a/examples/gui.html
+++ b/examples/gui.html
@@ -1,5 +1,5 @@
 <style>
-  @import url('./style.css');
+  @import url("./style.css");
 </style>
 
 <script type="importmap">
@@ -12,11 +12,31 @@
 </script>
 
 <t-renderer orbit>
-  <t-hello></t-hello>
-  <t-scene-gui></t-scene-gui>
+  <t-studio debug></t-studio>
+  <t-mesh
+    geo="Sphere"
+    :props="{castShadow: true}"
+  >
+    <t-material type="MeshStandard" color="blue" />
+  </t-mesh>
 </t-renderer>
 
 <script type="module">
   import "../three-webc.js";
-  import "./addons/gui/scene-gui.js"
+  import "./addons/gui/gui.js";
+  import "./addons/studio.js";
+  import "./addons/mesh.js";
+
+  {
+    const { GUI } = await import(
+      "https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
+    );
+    const gui = new GUI();
+
+    const folder = gui;
+    const object = document.querySelector("t-mesh").mesh
+    folder.add(object.position, "x").step(0.1).listen();
+    folder.add(object.position, "y").step(0.1).listen();
+    folder.add(object.position, "z").step(0.1).listen();
+  }
 </script>
