--- a/examples/overlay.html
+++ b/examples/overlay.html
@@ -1,5 +1,15 @@
 <style>
   @import url("./style.css");
+
+  t-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5px;
+    background: black;
+    color: white;
+    border-radius: 5px;
+  }
 </style>
 
 <script type="importmap">
@@ -11,113 +21,46 @@
   }
 </script>
 
-<t-renderer antialias orbit>
+<t-renderer orbit>
+  <t-camera :position="{ x: 10, y:10, z: 10 }"></t-camera>
+  <t-raycaster></t-raycaster>
   <t-studio></t-studio>
-  <t-camera :position="{ z: 10 }"></t-camera>
-  <t-object3d>
-    <t-raycaster></t-raycaster>
-    <t-model
-      debug
-      :position="{x: -2}"
-      url="https://threejs.org/examples/models/gltf/Soldier.glb"
-    ></t-model>
-    <t-model
-      debug
-      :position="{x: 0}"
-      url="https://threejs.org/examples/models/gltf/Soldier.glb"
-    ></t-model>
-    <t-model
-      debug
-      :position="{x: 2}"
-      url="https://threejs.org/examples/models/gltf/Soldier.glb"
-    ></t-model>
-  </t-object3d>
+  <t-mesh geo="Box" :position="{ x: 0 }" :props="{castShadow: false}">
+    <t-overlay>
+      Hello <b>World</b>
+      <button>Click me</button>
+    </t-overlay>
+    <t-material type="MeshStandard" color="green" />
+  </t-mesh>
   <t-effects></t-effects>
 </t-renderer>
 
-<t-gui>
-  <p>Animation showcase and hit test.</p>
-</t-gui>
-
 <script type="module">
   import "../three-webc.js";
-  import "./addons/model.js";
   import "./addons/studio.js";
-  import * as EFFECTS from "./addons/effects.js";
+  import "./addons/mesh.js";
+  import "./addons/effects.js";
+  import "./addons/overlay.js";
+  import "./addons/camera.js";
 
-  const renderer = document.querySelector("t-renderer");
-
-  const moveForward = (model) => (t) => {
-    const direction = model.rotation.y;
-    model.position.z += t * Math.cos(direction);
-    model.position.x += t * Math.sin(direction);
-  };
-
-  document.querySelectorAll("t-model")[0].addEventListener("ready", (e) => {
-    const { gltf, mixer } = e.target;
-    mixer.clipAction(gltf.animations[1]).play();
-  });
-
-  document.querySelectorAll("t-model")[1].addEventListener("ready", (e) => {
-    const { gltf, mixer } = e.target;
-    mixer.clipAction(gltf.animations[2]).play();
-  });
-
-  renderer.rafs.push((t) => {
-    // {
-    //   const model = models[0];
-    //   model.rotation.y += 0.3 * t;
-    //   moveForward(model)(t);
-    // }
-    // {
-    //   const model = models[1];
-    //   model.rotation.y -= 0.3 * t;
-    //   moveForward(model)(t);
-    // }
-  });
-
-  // Interact from console
-  // document.querySelector('t-model').position.x += 0.1
-
+  // ==========
   const state = {
-    current: { name: ''},
+    speed: -0.3,
   };
 
-  // Raycast
-  const raycaster = document.querySelector("t-raycaster");
+  setTimeout(() => {
+    const model = document.querySelector("t-mesh").mesh;
+    document.querySelector("t-renderer").rafs.push((t) => {
+      {
+        const directionAxis = "y";
 
-  renderer.domElement.addEventListener("mousemove", (e) => {
-    const intersects = raycaster.cast();
-    const object = intersects.length && intersects[0].object;
-
-    if (object && state.current.uuid !== object.uuid) {
-      EFFECTS.bounce(object, { scale: 1.2 });
-    }
-
-    document.body.style.cursor = object ? "pointer" : "";
-    Object.assign(state.current, object || { name: "", uuid: "" });
+        // Alter direction
+        model.rotation[directionAxis] += state.speed * t;
+        const angle = model.rotation[directionAxis];
+        // moveForward(model)(t);
+        model.position.z += t * Math.cos(angle);
+        model.position.x += t * Math.sin(angle);
+      }
+    });
   });
-
-  renderer.domElement.addEventListener("click", (e) => {
-    const intersects = raycaster.cast();
-    const object = intersects.length && intersects[0].object;
-    if(!object) {
-      console.warn('void ray')
-    }
-    if (object) {
-      console.warn('hit',object)
-      EFFECTS.bounce(object);
-    }
-  });
-
-  {
-    const { GUI } = await import(
-      "https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
-    );
-    const gui = new GUI();
-
-    const raycaster = document.querySelector("t-raycaster");
-    const folder = gui;
-    folder.add(state.current, "name").listen();
-  }
 </script>
