lazy list and status

--- a/examples/animation.html
+++ b/examples/animation.html
@@ -45,6 +45,7 @@
 
 <t-gui>
   <p>Animation showcase and hit test.</p>
+  <v-alert type="warning" outlined shaped>Broken</v-alert>
 </t-gui>
 
 <script type="module">
