--- a/examples/raycast.html
+++ b/examples/raycast.html
@@ -24,7 +24,7 @@
 <script type="module">
   import "../three-webc.js";
   import * as THREE from "three";
-  import "./addons/crate.js";
+  import "./addons/objects/crate.js";
   import "./addons/studio.js";
   import "./addons/object3d.js";
   import * as EFFECTS from "./addons/effects.js";
