--- a/examples/animation.html
+++ b/examples/animation.html
@@ -45,7 +45,7 @@
 
 <t-gui>
   <p>Animation showcase and hit test.</p>
-  <v-alert type="warning" outlined shaped>raycast is not working on animations.</v-alert>
+  <v-alert type="warning" outlined shaped>TODO raycast is not working on animations.</v-alert>
 </t-gui>
 
 <script type="module">
