proper addons barrel

--- a/examples/lights.html
+++ b/examples/lights.html
@@ -7,17 +7,18 @@
     "imports": {
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
-      "three-webc": "https://cdn.jsdelivr.net/npm/three-webc/src/index.js",
-      "three-webc/addons/": "https://cdn.jsdelivr.net/npm/three-webc/examples/addons/"
+      "three-webc": "../src/index.js",
+      "three-webc/addons/": "./addons/"
     }
   }
 </script>
 
 <t-renderer orbit>
-  <t-hello></t-hello>
+  <t-camera :props="{fov: 30}" :position="{ x: 4, y:4, z: 4 }"></t-camera>
+  <t-studio></t-studio>
 </t-renderer>
 
 <script type="module">
   import "three-webc";
-  import "three-webc/addons/hello.js";
+  import "three-webc/addons/index.js";
 </script>
