--- a/examples/controls.html
+++ b/examples/controls.html
@@ -6,7 +6,9 @@
   {
     "imports": {
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
-      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/"
+      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
+      "three-webc": "../src/index.js",
+      "three-webc/addons/": "./addons/"
     }
   }
 </script>
