--- a/examples/hello.html
+++ b/examples/hello.html
@@ -7,8 +7,8 @@
     "imports": {
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
-      "three-webc": "https://cdn.jsdelivr.net/npm/three-webc/src/index.js",
-      "three-webc/addons/": "https://cdn.jsdelivr.net/npm/three-webc/examples/addons/"
+      "three-webc": "../src/index.js",
+      "three-webc/addons/": "./addons/"
     }
   }
 </script>
