rename to <gui-info>

--- a/examples/animation.html
+++ b/examples/animation.html
@@ -45,10 +45,10 @@
   <t-effects></t-effects>
 </t-renderer>
 
-<t-gui>
+<gui-info>
   <p>Animation showcase and hit test.</p>
   <v-alert type="warning" outlined shaped>TODO raycast is not working on animations.</v-alert>
-</t-gui>
+</gui-info>
 
 <script type="module">
   import "../three-webc.js";
