--- a/examples/geometry.html
+++ b/examples/geometry.html
@@ -24,9 +24,9 @@
   <t-studio></t-studio>
 </t-renderer>
 
-<t-gui>
+<gui-info>
   <p>This example shows how to add geometry.</p>
-</t-gui>
+</gui-info>
 
 <script type="module">
   import "../three-webc.js";
