--- a/examples/materials.html
+++ b/examples/materials.html
@@ -71,7 +71,7 @@
   <t-effects></t-effects>
 </t-renderer>
 
-<t-gui>
+<gui-info>
   <p>
     This example shows how to use materials and shadows.
     <a
@@ -80,7 +80,7 @@
       >more info</a
     >
   </p>
-</t-gui>
+</gui-info>
 
 <script type="module">
   import "../three-webc.js";
