--- a/examples/mesh.html
+++ b/examples/mesh.html
@@ -8,8 +8,7 @@
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
       "three-webc": "../src/index.js",
-      "three-webc/": "../src/",
-      "three-webc/addons/": "./addons/"
+      "three-webc/": "../"
     }
   }
 </script>
@@ -44,7 +43,7 @@
 </gui-info>
 
 <script type="module">
-  import "three-webc/index.js";
+  import "three-webc";
   import "three-webc/addons/index.js";
   import * as EFFECTS from "three-webc/addons/effects.js";
   import * as THREE from "three";
