--- a/examples/overlay.html
+++ b/examples/overlay.html
@@ -18,7 +18,7 @@
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
       "three-webc": "../src/index.js",
-      "three-webc/addons/": "./addons/"
+      "three-webc/": "../"
     }
   }
 </script>
@@ -38,12 +38,12 @@
 </t-renderer>
 
 <script type="module">
-  import "../three-webc.js";
-  import "./addons/studio.js";
-  import "./addons/mesh.js";
-  import "./addons/effects.js";
-  import "./addons/overlay.js";
-  import "./addons/camera.js";
+  import "three-webc/three-webc.js";
+  import "three-webc/addons/studio.js";
+  import "three-webc/addons/mesh.js";
+  import "three-webc/addons/effects.js";
+  import "three-webc/addons/overlay.js";
+  import "three-webc/addons/camera.js";
 
   // ==========
   const state = {
