--- a/examples/start.html
+++ b/examples/start.html
@@ -8,7 +8,7 @@
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
       "three-webc": "../src/index.js",
-      "three-webc/addons/": "./addons/"
+      "three-webc/": "../"
     }
   }
 </script>
@@ -16,7 +16,7 @@
 <t-renderer orbit></t-renderer>
 
 <script type="module">
-  import "../three-webc.js";
+  import "three-webc";
 
   const view = document.querySelector("t-renderer");
 
