--- a/examples/controls.html
+++ b/examples/controls.html
@@ -8,7 +8,7 @@
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
       "three-webc": "../src/index.js",
-      "three-webc/addons/": "./addons/"
+      "three-webc/": "../"
     }
   }
 </script>
@@ -19,6 +19,6 @@
 </t-renderer>
 
 <script type="module">
-  import "../three-webc.js";
-  import "./addons/hello.js";
+  import "three-webc/three-webc.js";
+  import "three-webc/addons/hello.js";
 </script>
