--- a/examples/geometries.html
+++ b/examples/geometries.html
@@ -8,7 +8,7 @@
       "three": "https://cdn.jsdelivr.net/npm/three@0.141.0/build/three.module.js",
       "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.141.0/examples/jsm/",
       "three-webc": "../src/index.js",
-      "three-webc/addons/": "./addons/"
+      "three-webc/": "../"
     }
   }
 </script>
@@ -29,11 +29,8 @@
 </gui-info>
 
 <script type="module">
-  import "../three-webc.js";
-  import "./addons/geo.js";
-  import {GEOMETRIES} from "./addons/geo.js";
-  import "./addons/studio.js"
-  import "./addons/object3d.js"
+  import "three-webc/three-webc.js";
+  import {GEOMETRIES} from "three-webc/addons/index.js";
 
   GEOMETRIES.forEach((type,index) => {
     const el = document.createElement('t-geo')
